# IpsLogger

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  readme.md
.github/workflows/: linux.yml  macos.yml  wiki.yml
benchmark/: CMakeLists.txt  logger.hpp  main.banchmark.cpp  time_convertion.hpp
docs/: Configuration.md  Home.md  Install.md  RotateFiles.md  Usage.md  _Footer.md  macros.md
include/ips/logger/: definitions.hpp  formatter.hpp  log.hpp  recorder.hpp  version.hpp  writer.hpp
include/ips/logger/ditails/: dateFormatter.hpp  fileWriter.hpp  storageLoggers.hpp
playground/: CMakeLists.txt  main.cpp
sources/: dateFormatter.cpp  fileWriter.cpp  log.cpp  recorder.cpp  storageLoggers.cpp  version.cpp
sources/details/: consoleFormatter.cpp  consoleFormatter.hpp  data_chacher.cpp  data_chacher.hpp  dateFormatter.cpp  dateFormatter.hpp  fileWriter.cpp  fileWriter.hpp  logger.cpp  logger.hpp  storage.cpp  storage.hpp  storageLoggers.cpp  storageLoggers.hpp  streamWriter.cpp  streamWriter.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  customrecorder.tests.cpp  dateformatter.tests.cpp  main.test.cpp  recorder.tests.cpp  storageloggers.tests.cpp
